--- a/PART 3, Tier 1 - Modeling .ipynb
+++ b/PART 3, Tier 1 - Modeling .ipynb
@@ -1797,19 +1797,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.14206054745123442"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Now make a variable called obs_difference, and assign it the result of the mean of our 'apple' variable and the mean of our 'google variable'\n",
-    "obs_difference = np.mean(_ _ _) - np.mean(_ _ _)\n",
+    "obs_difference = np.mean(apple) - np.mean(google)\n",
     "\n",
     "# Make this difference absolute with the built-in abs() function. \n",
-    "obs_difference = _ _ _(obs_difference)\n",
+    "obs_difference = abs(obs_difference)\n",
     "\n",
     "# Print out this value; it should be 0.1420605474512291. \n",
     "obs_difference"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
