--- a/Unit 4 Challenge - Tier 3.ipynb
+++ b/Unit 4 Challenge - Tier 3.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -667,7 +667,7 @@
        "[330 rows x 49 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,14 +695,405 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "cdAu1A3YoH_r"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City of London</th>\n",
+       "      <th>Barking &amp; Dagenham</th>\n",
+       "      <th>Barnet</th>\n",
+       "      <th>Bexley</th>\n",
+       "      <th>Brent</th>\n",
+       "      <th>Bromley</th>\n",
+       "      <th>Camden</th>\n",
+       "      <th>Croydon</th>\n",
+       "      <th>Ealing</th>\n",
+       "      <th>...</th>\n",
+       "      <th>NORTH WEST</th>\n",
+       "      <th>YORKS &amp; THE HUMBER</th>\n",
+       "      <th>EAST MIDLANDS</th>\n",
+       "      <th>WEST MIDLANDS</th>\n",
+       "      <th>EAST OF ENGLAND</th>\n",
+       "      <th>LONDON</th>\n",
+       "      <th>SOUTH EAST</th>\n",
+       "      <th>SOUTH WEST</th>\n",
+       "      <th>Unnamed: 47</th>\n",
+       "      <th>England</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaT</td>\n",
+       "      <td>E09000001</td>\n",
+       "      <td>E09000002</td>\n",
+       "      <td>E09000003</td>\n",
+       "      <td>E09000004</td>\n",
+       "      <td>E09000005</td>\n",
+       "      <td>E09000006</td>\n",
+       "      <td>E09000007</td>\n",
+       "      <td>E09000008</td>\n",
+       "      <td>E09000009</td>\n",
+       "      <td>...</td>\n",
+       "      <td>E12000002</td>\n",
+       "      <td>E12000003</td>\n",
+       "      <td>E12000004</td>\n",
+       "      <td>E12000005</td>\n",
+       "      <td>E12000006</td>\n",
+       "      <td>E12000007</td>\n",
+       "      <td>E12000008</td>\n",
+       "      <td>E12000009</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>E92000001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1995-01-01</td>\n",
+       "      <td>91448.98487</td>\n",
+       "      <td>50460.2266</td>\n",
+       "      <td>93284.51832</td>\n",
+       "      <td>64958.09036</td>\n",
+       "      <td>71306.56698</td>\n",
+       "      <td>81671.47692</td>\n",
+       "      <td>120932.8881</td>\n",
+       "      <td>69158.16225</td>\n",
+       "      <td>79885.89069</td>\n",
+       "      <td>...</td>\n",
+       "      <td>43958.48001</td>\n",
+       "      <td>44803.42878</td>\n",
+       "      <td>45544.52227</td>\n",
+       "      <td>48527.52339</td>\n",
+       "      <td>56701.5961</td>\n",
+       "      <td>74435.76052</td>\n",
+       "      <td>64018.87894</td>\n",
+       "      <td>54705.1579</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53202.77128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1995-02-01</td>\n",
+       "      <td>82202.77314</td>\n",
+       "      <td>51085.77983</td>\n",
+       "      <td>93190.16963</td>\n",
+       "      <td>64787.92069</td>\n",
+       "      <td>72022.26197</td>\n",
+       "      <td>81657.55944</td>\n",
+       "      <td>119508.8622</td>\n",
+       "      <td>68951.09542</td>\n",
+       "      <td>80897.06551</td>\n",
+       "      <td>...</td>\n",
+       "      <td>43925.42289</td>\n",
+       "      <td>44528.80721</td>\n",
+       "      <td>46051.57066</td>\n",
+       "      <td>49341.29029</td>\n",
+       "      <td>56593.59475</td>\n",
+       "      <td>72777.93709</td>\n",
+       "      <td>63715.02399</td>\n",
+       "      <td>54356.14843</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53096.1549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1995-03-01</td>\n",
+       "      <td>79120.70256</td>\n",
+       "      <td>51268.96956</td>\n",
+       "      <td>92247.52435</td>\n",
+       "      <td>64367.49344</td>\n",
+       "      <td>72015.76274</td>\n",
+       "      <td>81449.31143</td>\n",
+       "      <td>120282.2131</td>\n",
+       "      <td>68712.44341</td>\n",
+       "      <td>81379.86288</td>\n",
+       "      <td>...</td>\n",
+       "      <td>44434.8681</td>\n",
+       "      <td>45200.46775</td>\n",
+       "      <td>45383.82395</td>\n",
+       "      <td>49442.17973</td>\n",
+       "      <td>56171.18278</td>\n",
+       "      <td>73896.84204</td>\n",
+       "      <td>64113.60858</td>\n",
+       "      <td>53583.07667</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53201.2843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1995-04-01</td>\n",
+       "      <td>77101.20804</td>\n",
+       "      <td>53133.50526</td>\n",
+       "      <td>90762.87492</td>\n",
+       "      <td>64277.66881</td>\n",
+       "      <td>72965.63094</td>\n",
+       "      <td>81124.41227</td>\n",
+       "      <td>120097.899</td>\n",
+       "      <td>68610.04641</td>\n",
+       "      <td>82188.90498</td>\n",
+       "      <td>...</td>\n",
+       "      <td>44267.7796</td>\n",
+       "      <td>45614.34341</td>\n",
+       "      <td>46124.23045</td>\n",
+       "      <td>49455.93299</td>\n",
+       "      <td>56567.89582</td>\n",
+       "      <td>74455.28754</td>\n",
+       "      <td>64623.22395</td>\n",
+       "      <td>54786.01938</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>53590.8548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>325</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>804893.2286</td>\n",
+       "      <td>338740.2566</td>\n",
+       "      <td>577764.8496</td>\n",
+       "      <td>381256.27</td>\n",
+       "      <td>524891.5547</td>\n",
+       "      <td>479849.9967</td>\n",
+       "      <td>878079.0427</td>\n",
+       "      <td>406268.3279</td>\n",
+       "      <td>515976.6395</td>\n",
+       "      <td>...</td>\n",
+       "      <td>200445.3085</td>\n",
+       "      <td>194613.9834</td>\n",
+       "      <td>232076.8481</td>\n",
+       "      <td>234659.9288</td>\n",
+       "      <td>336816.4897</td>\n",
+       "      <td>518135.3252</td>\n",
+       "      <td>375737.8796</td>\n",
+       "      <td>307886.4759</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>290801.8995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>326</th>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>855420.8857</td>\n",
+       "      <td>344508.234</td>\n",
+       "      <td>575081.4943</td>\n",
+       "      <td>385776.5313</td>\n",
+       "      <td>527232.9946</td>\n",
+       "      <td>481563.0744</td>\n",
+       "      <td>860223.8412</td>\n",
+       "      <td>409024.8902</td>\n",
+       "      <td>521127.2335</td>\n",
+       "      <td>...</td>\n",
+       "      <td>203588.6506</td>\n",
+       "      <td>198106.8969</td>\n",
+       "      <td>235238.333</td>\n",
+       "      <td>237246.2108</td>\n",
+       "      <td>342898.7477</td>\n",
+       "      <td>523601.7548</td>\n",
+       "      <td>377072.7902</td>\n",
+       "      <td>311554.1823</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>294289.9045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>327</th>\n",
+       "      <td>2022-03-01</td>\n",
+       "      <td>820173.0386</td>\n",
+       "      <td>344913.4524</td>\n",
+       "      <td>581850.2156</td>\n",
+       "      <td>391835.5529</td>\n",
+       "      <td>529162.7962</td>\n",
+       "      <td>485616.7656</td>\n",
+       "      <td>863239.0222</td>\n",
+       "      <td>414135.7394</td>\n",
+       "      <td>528056.3273</td>\n",
+       "      <td>...</td>\n",
+       "      <td>204012.9687</td>\n",
+       "      <td>197783.6861</td>\n",
+       "      <td>238069.6329</td>\n",
+       "      <td>240176.0465</td>\n",
+       "      <td>342544.0674</td>\n",
+       "      <td>523801.0171</td>\n",
+       "      <td>382481.3375</td>\n",
+       "      <td>312546.2545</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>296058.1518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>328</th>\n",
+       "      <td>2022-04-01</td>\n",
+       "      <td>852033.1215</td>\n",
+       "      <td>340146.3039</td>\n",
+       "      <td>594100.1945</td>\n",
+       "      <td>392863.7762</td>\n",
+       "      <td>536032.6782</td>\n",
+       "      <td>492720.2493</td>\n",
+       "      <td>864421.1106</td>\n",
+       "      <td>418122.824</td>\n",
+       "      <td>533606.5887</td>\n",
+       "      <td>...</td>\n",
+       "      <td>206149.0503</td>\n",
+       "      <td>200544.9464</td>\n",
+       "      <td>239456.7501</td>\n",
+       "      <td>241880.9496</td>\n",
+       "      <td>344485.1873</td>\n",
+       "      <td>525191.4149</td>\n",
+       "      <td>383243.5612</td>\n",
+       "      <td>320164.3671</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>298454.2295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>329</th>\n",
+       "      <td>2022-05-01</td>\n",
+       "      <td>789804.9843</td>\n",
+       "      <td>344898.5222</td>\n",
+       "      <td>599325.9518</td>\n",
+       "      <td>396992.0142</td>\n",
+       "      <td>538731.6567</td>\n",
+       "      <td>498720.8269</td>\n",
+       "      <td>859331.8521</td>\n",
+       "      <td>419335.151</td>\n",
+       "      <td>542222.7647</td>\n",
+       "      <td>...</td>\n",
+       "      <td>205783.3592</td>\n",
+       "      <td>204834.8209</td>\n",
+       "      <td>244060.1051</td>\n",
+       "      <td>247162.4298</td>\n",
+       "      <td>353573.6883</td>\n",
+       "      <td>526182.9647</td>\n",
+       "      <td>388531.2965</td>\n",
+       "      <td>323417.9647</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>302278.092</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>330 rows × 49 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0 City of London Barking & Dagenham       Barnet       Bexley  \\\n",
+       "0          NaT      E09000001          E09000002    E09000003    E09000004   \n",
+       "1   1995-01-01    91448.98487         50460.2266  93284.51832  64958.09036   \n",
+       "2   1995-02-01    82202.77314        51085.77983  93190.16963  64787.92069   \n",
+       "3   1995-03-01    79120.70256        51268.96956  92247.52435  64367.49344   \n",
+       "4   1995-04-01    77101.20804        53133.50526  90762.87492  64277.66881   \n",
+       "..         ...            ...                ...          ...          ...   \n",
+       "325 2022-01-01    804893.2286        338740.2566  577764.8496    381256.27   \n",
+       "326 2022-02-01    855420.8857         344508.234  575081.4943  385776.5313   \n",
+       "327 2022-03-01    820173.0386        344913.4524  581850.2156  391835.5529   \n",
+       "328 2022-04-01    852033.1215        340146.3039  594100.1945  392863.7762   \n",
+       "329 2022-05-01    789804.9843        344898.5222  599325.9518  396992.0142   \n",
+       "\n",
+       "           Brent      Bromley       Camden      Croydon       Ealing  ...  \\\n",
+       "0      E09000005    E09000006    E09000007    E09000008    E09000009  ...   \n",
+       "1    71306.56698  81671.47692  120932.8881  69158.16225  79885.89069  ...   \n",
+       "2    72022.26197  81657.55944  119508.8622  68951.09542  80897.06551  ...   \n",
+       "3    72015.76274  81449.31143  120282.2131  68712.44341  81379.86288  ...   \n",
+       "4    72965.63094  81124.41227   120097.899  68610.04641  82188.90498  ...   \n",
+       "..           ...          ...          ...          ...          ...  ...   \n",
+       "325  524891.5547  479849.9967  878079.0427  406268.3279  515976.6395  ...   \n",
+       "326  527232.9946  481563.0744  860223.8412  409024.8902  521127.2335  ...   \n",
+       "327  529162.7962  485616.7656  863239.0222  414135.7394  528056.3273  ...   \n",
+       "328  536032.6782  492720.2493  864421.1106   418122.824  533606.5887  ...   \n",
+       "329  538731.6567  498720.8269  859331.8521   419335.151  542222.7647  ...   \n",
+       "\n",
+       "      NORTH WEST YORKS & THE HUMBER EAST MIDLANDS WEST MIDLANDS  \\\n",
+       "0      E12000002          E12000003     E12000004     E12000005   \n",
+       "1    43958.48001        44803.42878   45544.52227   48527.52339   \n",
+       "2    43925.42289        44528.80721   46051.57066   49341.29029   \n",
+       "3     44434.8681        45200.46775   45383.82395   49442.17973   \n",
+       "4     44267.7796        45614.34341   46124.23045   49455.93299   \n",
+       "..           ...                ...           ...           ...   \n",
+       "325  200445.3085        194613.9834   232076.8481   234659.9288   \n",
+       "326  203588.6506        198106.8969    235238.333   237246.2108   \n",
+       "327  204012.9687        197783.6861   238069.6329   240176.0465   \n",
+       "328  206149.0503        200544.9464   239456.7501   241880.9496   \n",
+       "329  205783.3592        204834.8209   244060.1051   247162.4298   \n",
+       "\n",
+       "    EAST OF ENGLAND       LONDON   SOUTH EAST   SOUTH WEST Unnamed: 47  \\\n",
+       "0         E12000006    E12000007    E12000008    E12000009         NaN   \n",
+       "1        56701.5961  74435.76052  64018.87894   54705.1579         NaN   \n",
+       "2       56593.59475  72777.93709  63715.02399  54356.14843         NaN   \n",
+       "3       56171.18278  73896.84204  64113.60858  53583.07667         NaN   \n",
+       "4       56567.89582  74455.28754  64623.22395  54786.01938         NaN   \n",
+       "..              ...          ...          ...          ...         ...   \n",
+       "325     336816.4897  518135.3252  375737.8796  307886.4759         NaN   \n",
+       "326     342898.7477  523601.7548  377072.7902  311554.1823         NaN   \n",
+       "327     342544.0674  523801.0171  382481.3375  312546.2545         NaN   \n",
+       "328     344485.1873  525191.4149  383243.5612  320164.3671         NaN   \n",
+       "329     353573.6883  526182.9647  388531.2965  323417.9647         NaN   \n",
+       "\n",
+       "         England  \n",
+       "0      E92000001  \n",
+       "1    53202.77128  \n",
+       "2     53096.1549  \n",
+       "3     53201.2843  \n",
+       "4     53590.8548  \n",
+       "..           ...  \n",
+       "325  290801.8995  \n",
+       "326  294289.9045  \n",
+       "327  296058.1518  \n",
+       "328  298454.2295  \n",
+       "329   302278.092  \n",
+       "\n",
+       "[330 rows x 49 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "properties = properties.transpose()\n",
+    "properties"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -718,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -743,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -764,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -789,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -812,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -840,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -878,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
